--- a/src/layouts/ForCompanies/index.scss
+++ b/src/layouts/ForCompanies/index.scss
@@ -4,56 +4,156 @@
 @import '../../styles/_variables';
 
 .info-container {
-	padding: 3em 0em;
-	max-width: $page-width;
-	margin: auto;
-  
-	.page-container {
-	  h3,
-	  h4 {
-		text-align: left;
-		font-weight: 500;
-	  }
+    padding: 3em 0em;
+    max-width: $page-width;
+    margin: auto;
+    margin-top: -48rem;
+    width: 70%;
+    .page-container {
+        h3,
+        h4 {
+            text-align: left;
+            font-weight: 500;
+        }
 
-	  .buttonStyle {
-		text-align: center;
-	  }
-	}
-  }
+        .buttonStyle {
+            text-align: center;
+        }
+    }
+}
 
-  @media screen and (max-width: $breakpoint-mobile-flipped) {
-	.info-container {
-	  padding: 3em 1em;
-	}
+@media screen and (max-width: $breakpoint-mobile-flipped) {
+    .info-container {
+        padding: 3em 1em;
+    }
 
-  
-	#information-for-exhibitors {
-	  font-size: 2em;
-	}
-	
-  }
-  
-  a.anchor {
-	display: block;
-	position: relative;
-	top: -57px;
-	visibility: hidden;
-  }
+    #information-for-exhibitors {
+        font-size: 2em;
+    }
+}
+
+a.anchor {
+    display: block;
+    position: relative;
+    top: -57px;
+    visibility: hidden;
+}
 
 .faqpage-container {
-	padding-top: 3em;
-  max-width: $page-width;
-	margin: auto;
+    padding-top: 3em;
+    max-width: $page-width;
+    margin: auto;
+}
+
+body {
+    overflow: unset;
+}
+
+.layout {
+    overflow: unset;
+}
+
+.TOC {
+    display: inline-block;
+    position: sticky;
+    top: 25%;
+    height: 47rem;
+    width: 20vw;
+    background-color: #252524;
+    padding-top: 2%;
+    border-radius: 100px;
+    padding-top: 3%;
+    margin-left: 0.1rem;
+    margin-right: 0.1rem;
+    margin-bottom: 1rem;
+}
+
+.TOC ul {
+    display: inline;
+    list-style-type: none;
+}
+
+.TOC h2 {
+    padding-left: 10%;
+    display: inline;
+    color: white;
+    font-weight: 700;
+    font-size: 1.5vw;
+}
+
+.TOC .not-active {
+    display: inline-block;
+    color: #ffffff;
+    font-style: normal;
+    font-weight: 700;
+    padding-left: 5%;
+}
+
+.TOC li {
+    display: block;
+    padding: 3% 3% 3% 3%;
+    color: #ffffff;
+    font-style: normal;
+    width: 100%;
+    height: 2.5vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    font-size: 1vw;
+}
+
+.TOC .indent-1 {
+    padding-left: 10%;
+}
+
+.TOC .indent-2 {
+    padding-left: 14%;
+}
+
+.active {
+    text-decoration: underline;
+    color: #00ff19;
+    padding-left: 5%;
 }
 
 @media screen and (max-width: $breakpoint-mobile) {
-	.faqpage-container {
-		padding: 3em 1em 0em 1em;
-	}
+    .faqpage-container {
+        padding: 3em 1em 0em 1em;
+    }
 }
 
 @media screen and (max-width: $breakpoint-pad) {
-	.faqpage-container {
-		padding: 3em 1em 0em 1em;
-	}
+    .faqpage-container {
+        padding: 3em 1em 0em 1em;
+    }
+}
+
+@media screen and (max-width: 1570px) {
+    .TOC {
+        padding-top: 5%;
+        width: 15vw;
+    }
+}
+
+@media screen and (max-width: 1300px) {
+    .TOC {
+        padding-top: 5%;
+        width: 12vw;
+    }
+    .TOC h2 {
+        font-size: 1vw;
+    }
+
+    .TOC li {
+        height: 3vw;
+    }
+}
+
+@media screen and (max-width: 850px) {
+    .TOC {
+        display: none;
+    }
+    .info-container {
+        margin-top: unset;
+    }
 }
