--- a/src/layouts/ForCompanies/index.scss
+++ b/src/layouts/ForCompanies/index.scss
@@ -35,7 +35,7 @@
 a.anchor {
     display: block;
     position: relative;
-    top: -57px;
+    top: -100px;
     visibility: hidden;
 }
 
@@ -61,11 +61,28 @@ body {
     width: 20vw;
     background-color: #252524;
     padding-top: 2%;
-    border-radius: 100px;
     padding-top: 3%;
     margin-left: 0.1rem;
     margin-right: 0.1rem;
     margin-bottom: 1rem;
+    overflow-y: scroll;
+}
+
+.TOC::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    border-radius: 10px;
+    background-color: #f5f5f5;
+}
+
+.TOC::-webkit-scrollbar {
+    width: 12px;
+    background-color: #f5f5f5;
+}
+
+.TOC::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    background-color: #555;
 }
 
 .TOC ul {
@@ -91,15 +108,14 @@ body {
 
 .TOC li {
     display: block;
-    padding: 3% 3% 3% 3%;
     color: #ffffff;
     font-style: normal;
     width: 100%;
-    height: 2.5vw;
+    height: 3vw;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    font-size: 1vw;
+    font-size: 1.2vw;
 }
 
 .TOC .indent-1 {
@@ -128,10 +144,23 @@ body {
     }
 }
 
-@media screen and (max-width: 1570px) {
+@media screen and (max-width: 1550px) {
     .TOC {
-        padding-top: 5%;
-        width: 15vw;
+        width: 19vw;
+    }
+    .TOC li {
+        height: 5vw;
+        font-size: 1.2vw;
+    }
+}
+
+@media screen and (max-width: 1450px) {
+    .TOC {
+        width: 16vw;
+    }
+    .TOC li {
+        height: 8vw;
+        font-size: 1.5vw;
     }
 }
 
@@ -145,7 +174,7 @@ body {
     }
 
     .TOC li {
-        height: 3vw;
+        font-size: 1.5vw;
     }
 }
 
