--- a/src/layouts/ForCompanies/index.scss
+++ b/src/layouts/ForCompanies/index.scss
@@ -1,13 +1,17 @@
 @import '../../styles/global';
 @import '../../styles/_mixins';
-@import '../../styles/global';
 @import '../../styles/_variables';
 
 .info-container {
     padding: 3em 0em;
+    position: unset;
+    top: unset;
+    display: block;
     max-width: $page-width;
+    overflow-y: unset;
+    height: unset;
     margin: auto;
-    margin-top: -48rem;
+    margin-top: -95vh;
     width: 70%;
     .page-container {
         h3,
@@ -35,7 +39,7 @@
 a.anchor {
     display: block;
     position: relative;
-    top: -100px;
+    top: -57px;
     visibility: hidden;
 }
 
@@ -56,16 +60,16 @@ body {
 .TOC {
     display: inline-block;
     position: sticky;
-    top: 25%;
-    height: 47rem;
-    width: 20vw;
+    height: 90vh;
+    top: 7vh;
+    width: 20%;
     background-color: #252524;
     padding-top: 2%;
     padding-top: 3%;
     margin-left: 0.1rem;
     margin-right: 0.1rem;
     margin-bottom: 1rem;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 .TOC::-webkit-scrollbar-track {
@@ -111,7 +115,7 @@ body {
     color: #ffffff;
     font-style: normal;
     width: 100%;
-    height: 3vw;
+    height: 8vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -119,11 +123,15 @@ body {
 }
 
 .TOC .indent-1 {
-    padding-left: 10%;
+    padding-left: 8%;
 }
 
 .TOC .indent-2 {
     padding-left: 14%;
+}
+
+.TOC .indent-3 {
+    padding-left: 18%;
 }
 
 .active {
@@ -149,7 +157,7 @@ body {
         width: 19vw;
     }
     .TOC li {
-        height: 5vw;
+        height: 15vh;
         font-size: 1.2vw;
     }
 }
@@ -159,8 +167,8 @@ body {
         width: 16vw;
     }
     .TOC li {
-        height: 8vw;
-        font-size: 1.5vw;
+        height: 15vh;
+        font-size: 1.3vw;
     }
 }
 
@@ -174,7 +182,7 @@ body {
     }
 
     .TOC li {
-        font-size: 1.5vw;
+        font-size: 1.3vw;
     }
 }
 
