--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -238,6 +238,10 @@ hr {
             font-size: 3em;
         }
     }
+
+    p {
+        text-align: left;
+    }
 }
 
 @media screen and (max-width: 350px) {
