--- a/src/components/SideBarContents/ContentsMobile/index.scss
+++ b/src/components/SideBarContents/ContentsMobile/index.scss
@@ -16,10 +16,13 @@
 .ContentsMobile {
     display: flex;
     position: absolute;
-    width: 50vw;
+    width: 60vw;
     z-index: 9;
     flex-direction: column;
     background-color: #252524;
+    overflow-y: auto;
+    height: 80vh;
+    z-index: 10;
 }
 
 .ContentsMobile ul {
