Fixed Student FAQ bugs and make it look good
It looks much better now. But the old inconsistent uses of classes and classnames is something which needs to be fixed later

--- a/src/components/FAQ/index.scss
+++ b/src/components/FAQ/index.scss
@@ -6,32 +6,29 @@
     display: grid;
     width: 100%;
     grid-template-columns: auto auto auto auto;
+    gap: 0.5rem;
+}
+
+.grid-container-answers {
+    display: grid;
+    width: 100%;
+    grid-template-columns: auto auto;
 }
 
 .accordion-homepage {
-    border: thin solid #dadce0;
     border-radius: 0.5rem;
     box-sizing: border-box;
     margin: auto;
     margin-bottom: 3em;
-    width: 60%;
-}
-
-.accordion-homepage .parent:first-child,
-.accordion-homepage .parent:first-child > h2 {
-    border-top-left-radius: 0.625rem;
-    border-top-right-radius: 0.625rem;
-}
-
-.accordion-homepage .parent:first-child {
-    border-top: none;
 }
 
 .accordion-homepage .parent {
     position: relative;
-    border-top: thin solid #dadce0;
     padding: 0;
     -webkit-tap-highlight-color: transparent;
+    width: 100%;
+    text-align: center;
+    border: thin solid #dadce0;
 }
 
 .accordion-homepage .parent:not(.selected) h2 {
@@ -151,7 +148,7 @@
 /* using "topics-container" and "topic-container" is super confusing. Todo: change this */
 .topics-container {
     margin: 0 auto;
-    padding: 2em;
+    padding: 2rem;
     justify-content: center;
 }
 
@@ -167,17 +164,19 @@
 @media screen and (max-width: $breakpoint-pad) {
     .topics-container {
         flex-wrap: wrap;
-        align-items: center;
     }
 }
 /* This was previously set for some reason to fixed amount of pixels. Why, I do not know */
 .topic-container {
     border: 1px solid #c7c7c7;
-    box-sizing: content-box;
+    box-sizing: border-box;
     border-radius: 2px;
     display: flex;
     justify-content: center;
     cursor: pointer;
+    text-align: center;
+    width: 150px;
+    height: 150px;
 }
 
 .topic-container:hover {
@@ -191,9 +190,10 @@
 .topic {
     color: $melon;
     text-align: center;
-    font-size: 2.5vw;
     display: flex;
     align-items: center;
+    font-size: min(2vw, 1);
+    padding: 0.5rem;
 }
 
 .contactBtn {
