--- a/src/components/ContactCard/index.scss
+++ b/src/components/ContactCard/index.scss
@@ -2,92 +2,76 @@
 @import '../../styles/global';
 
 .contact-card {
-  position: relative;
-  margin: 30px auto;
-  width: 300px;
-  height: 300px;
-  border-radius: 40px;
-  box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.22);
-  transition: 0.4s;
-
-  &:hover {
-    transform: scale(0.9, 0.9);
-    box-shadow: 5px 5px 30px 15px rgba(0,0,0,0.25), 
-      -5px -5px 30px 15px rgba(0,0,0,0.22);
-  }
-  
-  p {
-    margin: 0;
-  }
-
-  .card-image {
-    width: inherit;
-    height: inherit;
+    position: relative;
+    margin: 30px auto;
+    width: 300px;
+    height: 300px;
     border-radius: 40px;
-    background-color: gray;
+    box-shadow: 5px 5px 30px 7px rgba(0, 0, 0, 0.25),
+        -5px -5px 30px 7px rgba(0, 0, 0, 0.22);
+    transition: 0.4s;
 
-    img {
-      width: inherit;
-      height: inherit;
-      border-radius: 40px;
-      object-fit: cover;
-      object-position: top;
-      filter: gray; /* IE5+ */
-          -webkit-filter: grayscale(1); /* Webkit Nightlies & Chrome Canary */
-          -webkit-transition: all .8s ease-in-out; 
-
-      &:hover {
-        filter: none;
-        -webkit-filter: grayscale(0);
-      }
-
+    p {
+        margin: 0;
     }
 
-  }
+    .card-image {
+        width: inherit;
+        height: inherit;
+        border-radius: 40px;
+        background-color: gray;
 
-  .card-title {
-    top: 210px;
-    position: absolute;
-    text-align: right;
-    width: 100%;
-    height: 90px;
-    background-color: rgba(0,0,0, 0.6);
-    border-radius: 0 0 40px 40px;
-
-    .card-text {
-      margin: 2px 0 0 20px !important;
-      text-align: left;
-
-      .card-name {
-        color: $melon;
-        font-weight: 400;
-        font-size: 20px;
-      }
-    
-      .title-melon {
-        color: $melon;
-        font-size: 14px;
-      }
-
-      .linkedin-logo{
-        position: absolute;
-        margin: 4px 10px 1px 10px;
-        text-align: right;
-        width: 18px;
-        height: 18px;
-        opacity: 0.9;
-        filter: gray;
-        -webkit-filter: grayscale(1);
-        -webkit-transition: all .3s ease-in-out; 
-
-        &:hover {
-          filter: none;
-          -webkit-filter: grayscale(0);
+        img {
+            width: inherit;
+            height: inherit;
+            border-radius: 40px;
+            object-fit: cover;
+            object-position: top;
         }
-
-      }
-
     }
-  }
-  
+
+    .card-title {
+        top: 210px;
+        position: absolute;
+        text-align: right;
+        width: 100%;
+        height: 90px;
+        background-color: rgba(0, 0, 0, 0.6);
+        border-radius: 0 0 40px 40px;
+
+        .card-text {
+            margin: 2px 0 0 20px !important;
+            text-align: left;
+
+            .card-name {
+                color: $melon;
+                font-weight: 400;
+                font-size: 20px;
+                text-align: left; //start moving away from using default text-align: justify as this breaks a lot of things
+            }
+
+            .title-melon {
+                color: $melon;
+                font-size: 14px;
+                display: inline;
+            }
+
+            .linkedin-logo {
+                position: absolute;
+                margin: 4px 10px 1px 10px;
+                text-align: right;
+                width: 18px;
+                height: 18px;
+                opacity: 0.9;
+                filter: gray;
+                -webkit-filter: grayscale(1);
+                -webkit-transition: all 0.3s ease-in-out;
+
+                &:hover {
+                    filter: none;
+                    -webkit-filter: grayscale(0);
+                }
+            }
+        }
+    }
 }
