--- a/src/components/ContactCard/index.scss
+++ b/src/components/ContactCard/index.scss
@@ -42,21 +42,29 @@
         .card-text {
             margin: 2px 0 0 20px !important;
             text-align: left;
+            display: flex;
+            height: 100%;
+            flex-direction: column;
+            justify-content: space-around;
 
             .card-name {
                 color: $melon;
                 font-weight: 400;
                 font-size: 20px;
+                line-height: 24px;
                 text-align: left; //start moving away from using default text-align: justify as this breaks a lot of things
             }
 
             .title-melon {
                 color: $melon;
                 font-size: 14px;
-                display: inline;
+                margin-top: 0px;
+                line-height: 8px;
             }
 
             .linkedin-logo {
+                bottom: 10%;
+                left: 80%;
                 position: absolute;
                 margin: 4px 10px 1px 10px;
                 text-align: right;
