--- a/src/components/TierlistContainer/TierlistCard/index.scss
+++ b/src/components/TierlistContainer/TierlistCard/index.scss
@@ -29,10 +29,14 @@
     }
 }
 
-.title {
+.cardTitle {
+    font-family: 'Oswald', sans-serif;
+    font-weight: 400;
     text-align: center;
     margin: 0;
     margin-top: 1rem;
+    font-size: 4vw;
+    color: $melon;
 }
 
 #listString {
@@ -41,4 +45,79 @@
 
 .tierImage {
     padding: 1vw;
+    width: 100%;
+}
+
+.tierlistContainer {
+    display: flex;
+    width: 125%;
+    justify-content: space-evenly;
+}
+
+.tierlistInfo {
+    width: 23%;
+    background-color: #302c2c;
+    align-self: self-end;
+    p {
+        all: unset;
+        display: flex;
+        font-weight: 800;
+        color: $melon;
+        height: 100px;
+        justify-content: center;
+        flex-direction: column;
+        padding: 0.5em 0 0.5em 0;
+        text-align: center;
+        font-size: 25px;
+    }
+    ul {
+        all: unset;
+        text-align: left;
+        list-style-type: none;
+        display: inline;
+    }
+    li {
+        all: unset;
+        text-decoration: none;
+        list-style-type: none;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        width: 100%;
+        height: 58px;
+        text-align: center;
+        border-top: 1px dashed $melon;
+        border-bottom: 1px dashed $melon;
+        font-size: 1vw;
+        padding: 0;
+        color: $melon;
+    }
+}
+
+@media screen and (min-width: 1550px) {
+    .cardTitle {
+        font-size: 3vw;
+    }
+}
+
+@media screen and (max-width: 1280px) {
+    .card {
+        width: 20%;
+    }
+}
+
+@media screen and (max-width: $breakpoint-mobile-flipped) {
+    .tierlistContainer {
+        width: 140%;
+        position: relative;
+        left: -27.5%;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .tierlistInfo {
+        p {
+            font-size: 18px;
+        }
+    }
 }
