Pushed down the images a bit

--- a/src/components/ContactCard/index.scss
+++ b/src/components/ContactCard/index.scss
@@ -10,7 +10,7 @@
     box-shadow: 5px 5px 30px 7px rgba(0, 0, 0, 0.25),
         -5px -5px 30px 7px rgba(0, 0, 0, 0.22);
     transition: 0.4s;
-
+    margin-top: 45px;
     p {
         margin: 0;
     }
