--- a/src/components/ContactCard/index.scss
+++ b/src/components/ContactCard/index.scss
@@ -3,7 +3,6 @@
 
 .contact-card {
     position: relative;
-    margin: 30px auto;
     width: 300px;
     height: 300px;
     border-radius: 40px;
@@ -11,6 +10,9 @@
         -5px -5px 30px 7px rgba(0, 0, 0, 0.22);
     transition: 0.4s;
     margin-top: 45px;
+    margin-bottom: 30px;
+    margin-right: 10px;
+    margin-left: 10px;
     p {
         margin: 0;
     }
