--- a/src/components/Contacts/index.scss
+++ b/src/components/Contacts/index.scss
@@ -11,7 +11,7 @@
         z-index: 0;
         width: 100%;
         display: flex;
-        justify-content: space-between;
+        justify-content: space-evenly;
         flex-wrap: wrap;
 
         .line {
