--- a/src/layouts/DiversityPage/index.scss
+++ b/src/layouts/DiversityPage/index.scss
@@ -16,15 +16,12 @@
         margin-left: auto;
         margin-right: auto;
     }
-
-
 }
 
 .diversitypage-container {
     padding-top: 2em;
     max-width: $page-width;
-	margin: auto;
-
+    margin: auto;
 }
 
 .diversity-day {
@@ -34,7 +31,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     padding: 3em;
-
+    margin: 1em 0 1em 0;
     h1,
     h2,
     h3,
