--- a/src/layouts/Exhibitors/index.scss
+++ b/src/layouts/Exhibitors/index.scss
@@ -9,3 +9,12 @@
         padding: 3em 1em;
     }
 }
+
+.buttonContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    button {
+        margin: 10px;
+    }
+}
