Added contents from product catalog with structure

--- a/src/layouts/ForCompanies/index.scss
+++ b/src/layouts/ForCompanies/index.scss
@@ -185,6 +185,15 @@ body {
     z-index: 10;
 }
 
+.flexshow {
+    display: baseline;
+}
+
+.infocard {
+    padding: 1rem;
+    max-width: 20rem;
+}
+
 @media screen and (max-width: $breakpoint-mobile) {
     .faqpage-container {
         padding: 3em 1em 0em 1em;
