--- a/src/layouts/Exhibitors/index.scss
+++ b/src/layouts/Exhibitors/index.scss
@@ -1,6 +1,17 @@
 @import '../../styles/variables';
 @import '../../styles/global';
 
+.tooEarly {
+    width: 100%;
+    div {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+    }
+}
+
 .exhibitors-container {
     max-width: $page-width;
     margin: auto;
